bg picture alignment, fixed starter page load

--- a/style.css
+++ b/style.css
@@ -32,7 +32,8 @@ body{
 }
 .Nav ul li{
 	list-style-type:none;
-	margin:0 10px 0 10px;
+	margin:0 15px 0 15px;
+	font-size:13px;
 }
 .Nav a{
 	color:gray;
